tests/ui/proc-macro/item-error.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/item-error.rs:10:8
   |
LL |     a: &u64
   |        ^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL ~ struct A<'a> {
LL ~     a: &'a u64
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
